[package]
name = "binance-lead-monitor"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
